Fix alignment of concept toggles on form

--- a/src/css/SearchForm.css
+++ b/src/css/SearchForm.css
@@ -35,8 +35,9 @@
   align-self: stretch;
 }
 
-.search-form .concept-type-toggle .toggle {
-  margin: 0 0 3px 3px;
+.search-form .concept-type-toggle .concept-type {
+  position: relative;
+  left: 3px;
 }
 
 .search-form .text-field input {
